--- a/index.html
+++ b/index.html
@@ -119,8 +119,36 @@
                                     looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
                                     passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
                             </div>
+                        </article>
 
+                        <article class="card -post">
+                            <a href="" class="link"></a>
+                            <div class="box-img">
+                                <img src="./content/img/imagem01.jpg" alt="">
+                            </div>
+                            <div class="box-content">
+                                <h4 class="title">There are many variations of passages of Lorem Ipsum available</h4>
+                                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in 
+                                    a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                                    Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
+                                    looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
+                                    passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+                            </div>
+                        </article>
 
+                        <article class="card -post">
+                            <a href="" class="link"></a>
+                            <div class="box-img">
+                                <img src="./content/img/imagem01.jpg" alt="">
+                            </div>
+                            <div class="box-content">
+                                <h4 class="title">There are many variations of passages of Lorem Ipsum available</h4>
+                                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in 
+                                    a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                                    Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia,
+                                    looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
+                                    passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
+                            </div>
                         </article>
                         
                         <a href="" class="load">carregar mais posts</a>
