Trocando imagens e cores

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                      <aside class="col-lg-4 col-12">
                            <h3 class="title -border">About</h3>
                            <div class="box -box-img">
-                               <img src="./content/img/imagem01.jpg" alt="">
+                               <img src="./content/img/logo.png" alt="">
                                <p>It is a long established fact that a reader will be distracted by the readable content 
                                    of a page when looking at its layout. The point of using Lorem Ipsum is that it has a 
                                    more-or-less normal distribution of letters, as opposed to using 'Content here, 
